# cocobolo

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: publish.yaml  test.yaml
docs/: macos-installation.md
frontend-tests/: README.md  tsconfig.json
frontend-tests/e2e/: notes-management.spec.ts  vault-selector.spec.ts  vault-unlock.spec.ts
frontend-tests/fixtures/: test-data.ts
frontend-tests/mocks/: tauri-api-mock.ts
frontend-tests/utils/: test-helpers.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_commands.rs  folder_commands.rs  mod.rs  note_commands.rs  vault_commands.rs
src-tauri/src/config/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/tests/: app_tests.rs  common.rs  error_tests.rs  folder_tests.rs  integration_tests.rs  mod.rs  note_tests.rs  vault_tests.rs
src-tauri/src/types/: mod.rs
src-tauri/src/vault/: mod.rs
src/components/: CreateNote.css  CreateNote.tsx  DraggableTreeNotesList.tsx  Icons.tsx  MarkdownEditor.css  MarkdownEditor.tsx  NotesList.css  NotesList.tsx  VaultCreator.tsx  VaultLocationSelector.css  VaultLocationSelector.tsx  VaultPasswordSetup.css  VaultPasswordSetup.tsx  VaultSelector.tsx  VaultUnlock.css  VaultUnlock.tsx  WhiteboardEditor.css  WhiteboardEditor.tsx
src/components/Layout/: MainLayout.css  MainLayout.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useNoteExistence.ts  useNoteUpdates.ts  useTheme.ts  useVaultLocation.ts  useVaultLocationJotai.ts
src/routes/: app-layout.tsx  app.tsx  document.tsx  home.tsx  layout.tsx  password-setup.tsx  vault-creator.tsx  vault-selector.tsx  vault-setup.tsx  vault-unlock.tsx
src/stores/: notesStore.ts
src/theme/: mantine-theme.ts
src/types/: index.ts
src/utils/: api.ts
