[package]
name = "cocobolo"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cocobolo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# Cryptographic dependencies for secure password handling
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
base64 = "0.22"

# Session and rate limiting dependencies
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"
tempfile = "3.8"
serial_test = "3.0"
rstest = "0.18"
mockall = "0.12"
proptest = "1.4"
hex = "0.4"

